manifests/apps/rss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: apps
spec:
  selector:
    app: miniflux
  ports:
    - name: http
      port: 8080
      targetPort: 8080
