manifests/apps/rss/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux
  namespace: apps
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - rss.cluster.nelsondane.com
    - rss.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: miniflux
          port: 8080
